# LLM-Inference

./: .env.example  .gitignore  LICENSE  Makefile  README.md  notes.md  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/: hooks.json
.cursor/hooks/: push-to-github.sh
.github/workflows/: ci.yml
docs/: ARTICLES_INDEX.md  ARTICLE_SERIES.md  BENCHMARK_WORKFLOW.md  INFERENCE_OPTIMIZATIONS_CATALOG.md  M3_RUNBOOK.md  OPTIMIZATIONS.md  README.md  REFERENCES.md
docs/articles/: 00-introduction.md  04-model-size.md  06-speculative-decoding.md  07-context-and-cache.md  08-serving.md  09-parallelism.md  10-runtimes.md  11-tradeoffs.md  README.md
docs/optimizations/: README.md  all-optimizations.md  kv-cache-quantization.md  llama-cpp-vs-mlx.md  math-and-implementation.md  prefill-and-flash-attention.md  speculative-decoding.md  weight-quantization.md  (+1 more)
prompts/: code.py  json_template.json  multilingual.txt  prose.txt
results/: llama3-8b_optimized_20260518T201449Z.json  llama3-8b_optimized_20260518T220859Z.json  llama3-8b_optimized_20260518T221237Z.json
scripts/: articles.py  benchmark_schema.py  benchmark_server.py  compare_runtimes.py  compare_runtimes.sh  generate_article_tables.py  hf_cli.sh  hf_env.sh  hf_login.sh  list_models.py  llamacpp_models.py  migrate_results.py  optimizations.py  plot_results.py  report.py  retry_failed.sh  run_article.py  run_article.sh  run_benchmark.py  run_full_sweep.sh  run_m3_all.sh  run_m5_ladder.sh  setup_env.sh  validate_results.py  workloads.py
tests/: test_benchmark_schema.py  test_smoke_cli.py  test_sweep_state.py
(+791 files in other folders)
